if(NOT ARCH STREQUAL "nanoMIPS")
  add_subdirectory(JM)
endif()
add_subdirectory(SIBsim4)
add_subdirectory(aha)
if(NOT ARCH STREQUAL "nanoMIPS")
  add_subdirectory(d)
endif()
if((NOT ARCH STREQUAL "PowerPC") AND (NOT ARCH STREQUAL "nanoMIPS"))
# This test has problems running on powerpc starting with r295538 and should
# be restored when the issue is corrected.
  add_subdirectory(oggenc)
endif()
add_subdirectory(sgefa)
if(NOT ARCH STREQUAL "nanoMIPS")
  add_subdirectory(spiff)
endif()
add_subdirectory(viterbi)

add_subdirectory(ALAC)
add_subdirectory(hbd)
if(NOT ARCH STREQUAL "nanoMIPS")
  add_subdirectory(lambda-0.1.3)
  add_subdirectory(minisat)
endif()
if((NOT TARGET_OS STREQUAL "SunOS") AND (NOT ARCH STREQUAL "nanoMIPS"))
  add_subdirectory(hexxagon)
endif()
if((NOT DEFINED SMALL_PROBLEM_SIZE) AND (NOT ARCH STREQUAL "nanoMIPS"))
  add_subdirectory(lua)
endif()
if((TARGET_OS STREQUAL "Linux" OR TARGET_OS STREQUAL "Darwin") AND
   (NOT ARCH STREQUAL "XCore") AND (NOT ARCH STREQUAL "nanoMIPS"))
  add_subdirectory(obsequi)
endif()
if((NOT TARGET_OS STREQUAL "SunOS") AND (NOT ARCH STREQUAL "nanoMIPS"))
  add_subdirectory(kimwitu++)
endif()
if(NOT TARGET_OS STREQUAL "SunOS")
  add_subdirectory(SPASS)
endif()
if((NOT ARCH STREQUAL "XCore") AND (NOT ARCH STREQUAL "nanoMIPS"))
  add_subdirectory(ClamAV)
  add_subdirectory(lemon)
  add_subdirectory(siod)
endif()
if((NOT ARCH STREQUAL "PowerPC") AND (NOT ARCH STREQUAL "XCore") AND (NOT ARCH STREQUAL "nanoMIPS"))
  add_subdirectory(sqlite3)
endif()
if(NOT TEST_SUITE_BENCHMARKING_ONLY)
  if (NOT ARCH STREQUAL "nanoMIPS")
    add_subdirectory(Burg)
  endif()
  add_subdirectory(treecc)
endif()
