add_subdirectory(ASCI_Purple)
add_subdirectory(Fhourstones)
add_subdirectory(Fhourstones-3.1)
add_subdirectory(FreeBench)
add_subdirectory(McCat)
add_subdirectory(NPB-serial)
add_subdirectory(Olden)
add_subdirectory(Ptrdist)
add_subdirectory(SciMark2-C)
add_subdirectory(llubenchmark)
add_subdirectory(Rodinia)

add_subdirectory(Prolangs-C++)
if(NOT DEFINED SMALL_PROBLEM_SIZE)
  add_subdirectory(mafft)
endif()
