add_subdirectory(ASCI_Purple)
if(NOT ARCH STREQUAL "nanoMIPS")
  add_subdirectory(ASC_Sequoia)
  add_subdirectory(BitBench)
endif()
add_subdirectory(Fhourstones)
add_subdirectory(Fhourstones-3.1)
add_subdirectory(FreeBench)
if(NOT ARCH STREQUAL "nanoMIPS")
  add_subdirectory(MallocBench)
endif()
add_subdirectory(McCat)
if(NOT ARCH STREQUAL "nanoMIPS")
  add_subdirectory(NPB-serial)
endif()
add_subdirectory(Olden)
if(NOT ARCH STREQUAL "nanoMIPS")
  add_subdirectory(Prolangs-C)
endif()
add_subdirectory(Ptrdist)
if(NOT ARCH STREQUAL "nanoMIPS")
  add_subdirectory(SciMark2-C)
  add_subdirectory(Trimaran)
  add_subdirectory(VersaBench)
endif()
add_subdirectory(llubenchmark)
if(NOT ARCH STREQUAL "nanoMIPS")
  add_subdirectory(mediabench)
  add_subdirectory(nbench)
  add_subdirectory(sim)
endif()
add_subdirectory(Rodinia)

if((NOT "${TARGET_OS}" STREQUAL "Darwin") OR (NOT "${ARCH}" STREQUAL "ARM"))
  if(NOT ARCH STREQUAL "nanoMIPS")
    add_subdirectory(TSVC)
  endif()
endif()
add_subdirectory(Prolangs-C++)
if(NOT ARCH STREQUAL "nanoMIPS")
  add_subdirectory(Bullet)
  add_subdirectory(tramp3d-v4)
  if(NOT "${ARCH}" STREQUAL "Hexagon")
    add_subdirectory(DOE-ProxyApps-C++)
    add_subdirectory(DOE-ProxyApps-C)
    add_subdirectory(MiBench)
  endif()
  if(NOT "${ARCH}" STREQUAL "XCore")
    add_subdirectory(7zip)
    add_subdirectory(PAQ8p)
  endif()
  if(NOT DEFINED SMALL_PROBLEM_SIZE)
    add_subdirectory(mafft)
  endif()
endif()
